--- a/design.html
+++ b/design.html
@@ -1,4 +1,6 @@
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Birthday Card</title>
     <!-- Google Font-->
@@ -7,13 +9,13 @@
       rel="stylesheet"
     />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="app.component.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="card">
       <div class="outside">
         <div class="front">
-          <p>Happy Birthday Abby!</p>
+          <p>Happy Birthday</p>
           <div class="cake">
             <div class="top-layer"></div>
             <div class="middle-layer"></div>
@@ -24,8 +26,9 @@
         <div class="back"></div>
       </div>
       <div class="inside">
-        <p>Wishing you a very happy birthday filled with amazing memories</p>
+        <p>Wishing you a very happy birthday filled with love and laughter</p>
         <h1>&#127873;</h1>
       </div>
     </div>
   </body>
+</html>
