--- a/design.html
+++ b/design.html
@@ -15,7 +15,7 @@
     <div class="card">
       <div class="outside">
         <div class="front">
-          <p>Happy Birthday</p>
+          <p>Happy Birthday Abby!</p>
           <div class="cake">
             <div class="top-layer"></div>
             <div class="middle-layer"></div>
@@ -27,6 +27,7 @@
       </div>
       <div class="inside">
         <p>Wishing you a very happy birthday filled with love and laughter</p>
+        <img src="absleep.jpg" alt="Girl in a jacket" width="500" height="600">
         <h1>&#127873;</h1>
       </div>
     </div>
